fixed some responsive issues with the small device screens, text was overlapping see more button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,13 +117,16 @@ footer {
     height: 95vh;
     background: url(../images/JuliusCaesarRomeg.jpg) no-repeat center center/cover;
     position: relative;
+    top: 20%;
 }
 
 #Main-Caesar-Text {
-    padding: 40vh 0;
+    position: relative;
+    top: 45%;
+    width: 100%;
 }
 
-#Main-Caesar-Text > p {
+#Main-Caesar-Text p {
     color: #ffffff;
     font-size: large;
     text-align: center;
@@ -246,10 +249,6 @@ div > h1 {
         margin-top: 79px;
     }
 
-    #Main-Caesar-Text {
-        padding: 35rem 1rem 0 1rem;
-    }
-
     #Main-Caesar-Text > p {
         letter-spacing: 3px;
         font-size: 25px;
@@ -277,8 +276,12 @@ div > h1 {
         background: url(../images/vercingetorix.jpg) no-repeat center center/cover;
     }
 
-        #Main-Caesar-Text>p {
-            font-size: 35px;
+    #Main-Caesar-Text {
+        position: relative;
+        top: 50%;
+    }
+    #Main-Caesar-Text>p {
+        font-size: 35px;
         }
 
     /* Bio Content */
